--- a/ci.yml
+++ b/ci.yml
@@ -7,7 +7,7 @@ on:
 
   jobs:
     build-and-test:
-      runs-on: ubuntu
+      runs-on: ubuntu-22.04
 
       steps:
       -uses: actions/scheckout@v4
