--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,33 +1,31 @@
-name: CI/CD Kubsh
+name: Build and Release kubsh
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
+    tags:
+      - 'v*'
 
-  jobs:
-    build-and-test:
-      runs-on: ubuntu-22.04
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      steps:
-      -uses: actions/scheckout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      -name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y build-essential g++ pkg-config libfuse3-dev libreadline-dev dpkg-dev docker.io
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y build-essential cmake dpkg-dev
 
-      -name: Build kubsh
-      run: make all
+      - name: Build project
+        run: |
+          make clean
+          make
+          make deb
 
-      -name: Build .deb package
-      run: make deb
-
-      -name: Run tests in Docker
-      run: make test
-
-      -name: Upload .deb as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: kubsh-deb
-        path: kubsh_1.0.0_amd64.deb
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: kubsh-deb
+          path: kubsh_1.0.0_amd64.deb
